# src/controllers/list/index.go
@@ -1,0 +1,13 @@
+package list
+
+import (
+	"helpers/auth"
+	"lib/Router"
+)
+
+func Routes() {
+	controller := Controller{}
+	router := Router.Instance{Prefix: "/list"}
+
+	router.GET("/", controller.index, auth.IsAuthenticated)
+}
