# src/controllers/user/index.go
@@ -1,21 +1,14 @@
 package user
 
 import (
-	"helpers/validation"
-	"helpers/validation/types"
 	"lib/Router"
 )
 
 func Routes() {
 	controller := Controller{}
+	controller.Init()
+
 	router := Router.Instance{Prefix: "/user"}
 
-	body := validation.MustBe{
-		"username":  types.String{Required: true, Min: 3},
-		"firstName": types.String{Required: true, Min: 1},
-		"lastName":  types.String{Required: true, Min: 1},
-		"password":  types.String{Required: true, Min: 6},
-	}
-
-	router.POST("/{id}", controller.handleSignUp, validation.IsValid("body", body))
+	router.POST("/", controller.handleSignUp, checkBodySignUp)
 }
