# src/controllers/user/types.go
@@ -1,8 +1,0 @@
-package user
-
-type BodySignUp struct {
-	FirstName string
-	LastName  string
-	Password  string
-	Username  string
-}
